{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 23,
  "lineage": "50687546-f740-f4df-0d6a-94148850b6ae",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "fe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725172472:security-group/sg-09c14b1f0da8f9c31",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-09c14b1f0da8f9c31",
            "name": "FE-SG",
            "tags": {
              "Name": "FE-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-074a0c7b2005e4cc9"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725172472:security-group/sg-05aafb8e0c3d856a7",
            "description": "Linux",
            "filter": null,
            "id": "sg-05aafb8e0c3d856a7",
            "name": "Linux-SG",
            "tags": {
              "Linux-sg": "Linux-SG",
              "Name": "Linux-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-074a0c7b2005e4cc9"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0241b1d769b029352",
            "arn": "arn:aws:ec2:us-east-1:851725172472:instance/i-0713a24b42c3b810b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0713a24b42c3b810b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-virgina-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-077c0fc48e871d025",
            "private_dns": "ip-172-29-15-102.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.29.15.102",
            "public_ip": "3.94.252.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-033c80a641b15a67c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00fd30c94d5aabe0b",
            "tags": {
              "Name": "webapp-1"
            },
            "tags_all": {
              "Name": "webapp-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05aafb8e0c3d856a7",
              "sg-09c14b1f0da8f9c31"
            ]
          },
          "dependencies": [
            "data.aws_ami.redhat",
            "data.aws_key_pair.ssh-key",
            "data.aws_security_group.fe",
            "data.aws_security_group.linux"
          ]
        }
      ]
    }
  ]
}